--- a/auto_configs/hsrp_setup.yml
+++ b/auto_configs/hsrp_setup.yml
@@ -1,5 +1,5 @@
 ---
-- name: Configure HSRPv2 on Distribution Switches
+- name: Configure HSRPv2 (IPv4 + IPv6) on Distribution Switches
   hosts: switches
   gather_facts: no
 
@@ -7,29 +7,24 @@
     hsrp_vlans:
       - vlan: 67
         vip: 192.168.67.254
-        group6: 167
       - vlan: 69
         vip: 192.168.69.254
-        group6: 169
 
   tasks:
 
-    - name: Skip non-distribution switches (A1 safety guard)
+    - name: Skip non-distribution switches
       meta: end_host
       when: inventory_hostname not in ['D1', 'D2']
 
-    - name: Configure HSRPv2 for VLANs 67 and 69
+    - name: Configure HSRPv2 for IPv4 and IPv6
       ios_config:
-        parents:
-          - "interface Vlan{{ item.vlan }}"
+        parents: "interface Vlan{{ item.vlan }}"
         lines:
           - standby version 2
           - standby {{ item.vlan }} ip {{ item.vip }}
+          - standby {{ item.vlan }} ipv6 autoconfig
           - standby {{ item.vlan }} priority {{ priority }}
           - standby {{ item.vlan }} preempt
-          - standby {{ item.group6 }} ipv6 autoconfig
-          - standby {{ item.group6 }} ipv6 priority {{ priority }}
-          - standby {{ item.group6 }} preempt
       loop: "{{ hsrp_vlans }}"
       vars:
         priority: >-
