--- a/inventory.ini
+++ b/inventory.ini
@@ -17,7 +17,7 @@ switches
 [switches:children]
 multi_switches
 access_switch
-
+# ansisble + radius auth (local user is cisco,cisco on all devices)
 [cisco:vars]
 ansible_network_os=ios
 ansible_connection=network_cli
