--- a/auto_configs/probe_time.yml
+++ b/auto_configs/probe_time.yml
@@ -1,6 +1,6 @@
 ---
 - name: Configure IP SLA & Object Tracking for HSRP Failover
-  hosts: switches
+  hosts: multi_switches
   gather_facts: no
 
   vars:
@@ -10,16 +10,17 @@
 
   tasks:
 
-    - name: Run only on D1 and D2
-      meta: end_host
-      when: inventory_hostname not in ['D1', 'D2']
-
     - name: Configure IP SLA ICMP echo
       ios_config:
-        lines:
+        parents:
           - ip sla {{ sla_id }}
+        lines:
           - icmp-echo {{ sla_target }}
           - frequency 5
+
+    - name: Schedule IP SLA
+      ios_config:
+        lines:
           - ip sla schedule {{ sla_id }} life forever start-time now
 
     - name: Configure tracking object
@@ -40,27 +41,3 @@
           - interface Vlan69
         lines:
           - standby 69 track {{ track_id }} decrement 30
-
-    - name: Verify IP SLA status
-      ios_command:
-        commands:
-          - show ip sla statistics
-      register: sla_status
-
-    - name: Verify tracking status
-      ios_command:
-        commands:
-          - show track
-      register: track_status
-
-    - name: Display IP SLA results
-      debug:
-        msg:
-          - "===== {{ inventory_hostname }} IP SLA ====="
-          - "{{ sla_status.stdout_lines }}"
-
-    - name: Display Tracking results
-      debug:
-        msg:
-          - "===== {{ inventory_hostname }} Tracking ====="
-          - "{{ track_status.stdout_lines }}"
